# MONAIStream

./: .gitignore  Dockerfile  Dockerfile_dev  README.md  pyproject.toml  requirements-dev.txt  runtests.sh
.github/workflows/: tests.yml
monaistream/: __init__.py  simple_inference.py  stream_runner.py  threadsafe.py  verify.py
monaistream/gstreamer/: __init__.py  launch.py  numpy_transforms.py  tensor_transforms.py  tensorcallback.py  tensormixer.py  trace_transforms.py  utils.py
monaistream/streamrunners/: adaptors.py  gstreamer_noplugin.py  gstreamer_plugin.py  streamrunner.py
monaistream/streamrunners/gstreamer/: backend.py  subnet.py  utils.py
stream/: threadsafe.py  verify.py
stream/gstreamer/: utils.py
tests/: test_inference_engine.py  test_launch.py  test_numpy_transforms.py  test_stream_runner.py  test_tensor_transforms.py  utils.py
tests/adaptors/: test_workflow_adaptor.py
tests/notebooks/: test_perf.ipynb
tests/test_bundles/blur/configs/: inference.json  metadata.json  stream.json
tests/test_bundles/blur/docs/: README.md  test.ipynb
