[project]
name = "MONAIStream"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache2.0"}

[build-system]
build-backend = "setuptools.build_meta"
requires = ["wheel", "setuptools", "packaging>=20.0"]

[tool.setuptools.packages.find]
include = ["monai*"]

[tool.black]
line-length = 120
target-version = ['py39','py310','py311','py312','py313']
include = '\.pyi?$'
exclude = '''
(
  /(
    # exclude a few common directories in the root of the project
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.pytype
    | _build
    | build
    | dist
    | plugins
  )/
)
'''

[tool.flake8]
line-length = 120

